--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,14 @@ a:visited {
     color: #FFFFFF;
 }
 
+a:active {
+    color: #FFFFFF;
+}
+
+a:hover {
+    color: #FFFFFF;
+}
+
 
 .photo {
     margin-top: 72px;
